# final_project_backend

./: .env.example  .gitignore  Model-2.md  Model.md  README.md  book_filtering.md  book_store_model.md  coding_guide.md  crud-plan.md  crud_guide.md  crud_plan.md  crud_plan_2.md  crud_plan_3.md  dummy_data_plan.md  filtering.md  filtering_plan.md  guide.md  guide_author.md  guide_book.md  guide_category.md  guide_city.md  guide_country.md  guide_location.md  guide_publisher.md  guide_rating.md  guide_seller.md  guide_state.md  main.py  models.md  pyproject.toml  requirements.txt  seeder_plan.md  simple-db.md  test_config.py
src/: run.py  seed.py  testing.py
src/app/: __init__.py  config.py  extensions.py  seed.py
src/app/model/: __init__.py  address.py  author.py  blacklist_token.py  book.py  book_author.py  book_author_table.py  book_category_table.py  book_genre.py  cart.py  category.py  city.py  country.py  genre.py  inventory.py  language.py  location.py  order.py  order_item.py  product_listing.py  publisher.py  rating.py  review.py  seller.py  state.py  store.py  transaction.py  user.py  voucher.py  wishlist.py
src/app/router/: auth_route.py  user_route.py
src/app/routes/: __init__.py  auth_route.py  author_route.py  author_views.py  book_route.py  book_views.py  cart_route.py  category_route.py  category_views.py  city_route.py  country_route.py  location_route.py  publisher_route.py  (+9 more)
test/: conftest.py  test_user.py
test/integration/: test_api.py
test/unit/: test_auth_service.py  test_decorators.py  test_models.py  test_user_service.py  test_utils.py
(+26 files in other folders)
